# 3D2MC

./: .bad_words  .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  config.h  config.h.in  shader.cpp  shader.hpp
lib/figures/: CMakeLists.txt  cube.cpp  cube.h
shaders/: SimpleVertexShader.vertexshader
src/: CMakeLists.txt  blocks.XYZ  programm.cpp
